RESOLVED FIXED312119
Option element renders incorrectly when the label value is empty.
https://bugs.webkit.org/show_bug.cgi?id=312119
Summary Option element renders incorrectly when the label value is empty.
Alexsander Borges Damaceno
Reported 2026-04-12 21:31:07 PDT
Option element renders incorrectly when the label value is empty
Attachments
Alexsander Borges Damaceno
Comment 1 2026-04-12 21:34:24 PDT
EWS
Comment 2 2026-04-16 21:40:34 PDT
Committed 311421@main (09798e6f16d6): <https://commits.webkit.org/311421@main> Reviewed commits have been landed. Closing PR #62609 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-16 21:41:12 PDT
Note You need to log in before you can comment on or make changes to this bug.